# OpenCheetah

./: .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  QA.md  README.md  main_resnet50.cpp
SCI/: CMakeLists.txt  README.md
SCI/cmake/: SCIConfig.cmake  SCIConfig.cmake.in
SCI/networks/: CMakeLists.txt  main_densenet121.cpp  main_resnet32_cifar.cpp  main_resnet50.cpp  main_resnet64_imagenet.cpp  main_sqnet.cpp
SCI/src/: CMakeLists.txt  cleartext_library_fixed_uniform.h  defines.h  defines_uniform.h  functionalities_uniform.h  globals.cpp  globals.h  library_fixed.cpp  library_fixed_uniform.cpp  library_fixed_uniform.h  library_fixed_uniform_cheetah.cpp
SCI/src/BuildingBlocks/: CMakeLists.txt  aux-protocols.cpp  aux-protocols.h  truncation-cheetah.cpp  truncation.cpp  truncation.h  value-extension.cpp
SCI/src/LinearHE/: CMakeLists.txt  conv-field.cpp  conv-field.h  elemwise-prod-field.cpp  elemwise-prod-field.h  fc-field.cpp  fc-field.h  utils-HE.cpp  utils-HE.h
SCI/src/LinearOT/: CMakeLists.txt  linear-ot.cpp  linear-ot.h
SCI/src/Math/: math-functions.cpp
SCI/src/Millionaire/: bit-triple-generator.h  millionaire.h
SCI/src/NonLinear/: argmax.h  drelu-field.h  maxpool.h  relu-field.h  relu-interface.h  relu-ring.h
SCI/src/OT/: cf2-ot_pack.h  cheetah-ot_pack.h  co.h  cot.h  emp-ot.h  emp_iknp.h  ot-utils.h  ot_pack.h
SCI/src/OT/ferret/: silent_ot.h
SCI/src/cheetah/: CMakeLists.txt  cheetah-api.cpp  cheetah-api.h
SCI/src/utils/: CMakeLists.txt  block.h  ccrh.h  emp-tool.h  f2k.h  file_io_channel.h  hash.h  io_channel.h  mitccrh.h  net_io_channel.h  performance.h  prg.h  utils.h  utils.hpp
SCI/tests/: CMakeLists.txt  test_field_conv.cpp  test_field_elemwise_prod.cpp  test_field_maxpool.cpp  test_field_truncation.cpp  test_ring_maxpool.cpp  test_ring_relu.cpp  test_ring_truncation.cpp
credits/: EzPC
include/: CMakeLists.txt
include/gemini/: CMakeLists.txt
include/gemini/cheetah/: CMakeLists.txt  hom_bn_ss.cc  hom_bn_ss.h  hom_conv2d_ss.cc  hom_conv2d_ss.h  hom_fc_ss.cc  hom_fc_ss.h  shape_inference.cc  shape_inference.h  sliced_3d_tensor.h  tensor.h  tensor_encoder.cc  tensor_encoder.h  tensor_shape.cc  tensor_shape.h  tensor_types.h
include/gemini/core/: CMakeLists.txt  common.h  logging.cc  logging.h  types.cc  types.h
include/gemini/core/util/: ThreadPool.h  math.cc  math.h  seal.cc  seal.h  timer.h
networks/: README.md  main_Lenet.cpp  main_densenet121.cpp  main_sqnet.cpp  main_vgg11.cpp
patch/: HEXL-cmake.patch  HEXL.patch  SEAL.patch  emp-tool.patch
pretrained/: README.md  densenet121_input_scale12_pred739.inp  resnet50_input_scale12_pred249.inp  sqnet_input_scale12_pred248.inp
scripts/: README.md  build-deps.sh  build.sh  common.sh  run-client.sh  run-server.sh  throttle.sh
sqnet_demo/: DumpTFMtData.py  README.md  run.sh  squeezenet_main.py
